<resources>
    <string name="app_name">Ecomap Ukraine</string>

    <string name="title_search_activity">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_message">Loading...</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_find_location">action</string>
    <string name="filter">Filter</string>
    <string name="ECOMAP">ECOMAP</string>
    <string name="Ukraine">Ukraine</string>
    <string name="Login">Login</string>
    <string name="Sign_up"><u>Sign up</u></string>
    <string name="Sign_in"><u>Sign in</u></string>
    <string name="Skip"><u>Skip</u></string>
    <string name="Choose_problem_location_activity">Choose problem location</string>
    <string name="Tap_message">Tap to place marker</string>

    <string name="unsolved">Unsolved</string>
    <string name="resolved">Resolved</string>
    <string name="status">Status</string>
    <string name="other">Other issues</string>
    <string name="poaching">Poaching</string>
    <string name="biodiversity">Threat to biodiversity</string>
    <string name="water_pollution">Water pollution</string>
    <string name="illegal_building">Illegal building</string>
    <string name="rubbish_dump">Rubbish dump</string>
    <string name="deforestation">Forestry issues</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="facebook_app_id">1501305643493375</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="FAILURE_OF_LOG_IN">Unfortunately authentication was failed try again</string>
    <string name="FAILURE_OF_SIGN_UP">Unfortunately registration was failed try again</string>
    <string name="sign_up_navigator">Sign up</string>
    <string name="non_authorized_like">You must be authorized to like problems</string>
    <string name="error_of_connection">Error of connection. Try again</string>
    <string name="success_post_comment">Your comment was post successfully</string>
    <string name="empty_post_comment">Input field are empty. Please input something before posting</string>
    <string name="anonym_post_comment">You can`t post comment when you are anonym user. </string>

    <string name="photos">Photos:</string>
    <string name="title_activity_photo_viewer">PhotoViewer</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>

    <string name="choose_problem_location">Choose problem location</string>
    <string name="CANCEL">Cancel</string>
    <string name="add_problem_type">Problem Type:</string>
    <string name="problem_title">Problem title</string>
    <string name="problem_description">Problem description</string>
    <string name="problem_solution">Proposals to solve the problem</string>
    <string name="send_problem">Send problem</string>
    <string name="Caution">Caution</string>
    <string name="next">Next</string>

    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_problem_photo_slide_pager">ProblemPhotoSlidePager</string>
    <string name="title_activity_user_photo_full_screen">UserPhotoFullScreen</string>
    <string name="default_filter_date_from">11.31.2014</string>
    <string name="default_filter_date_to">11.11.2014</string>

    <string name="problem_added_successfully">Problem added successfully</string>
    <string name="photo_post_error">Connection error. Photo has not posted</string>
    <string name="problem_post_error">Connection error. Problem has not posted</string>
    <string name="post_problem_anonymously">Do you want post problem anonymously?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="settings_preferences">Settings preferences</string>

    <string name="title_activity_settings">Settings</string>
    <string name="updating_time">Updating time</string>
    <string name="default_updating_time">Once a week</string>

    <string name="map_type">Map type</string>
    <string name="default_map_type">Normal map type</string>

    <string name="cancel">Cancel</string>

    <string-array name="types">
        <item>Forestry issues</item>
        <item>Rubbish dump</item>
        <item>Illegal building</item>
        <item>Water pollution</item>
        <item>Threat to biodiversity</item>
        <item>Poaching</item>
        <item>Other issues</item>
    </string-array>

    <string name="Description">Description</string>
    <string name="Photo">Photo</string>
    <string name="settings">Settings</string>
    <string name="top10">Top 10</string>
    <string name="searchActivity">Search</string>
    <string name="action_search">Search</string>

    <string-array name="tabs_in_posting_problem">
        <item>@string/Description</item>
        <item>@string/Photo</item>
    </string-array>

    <string-array name="tabs_in_statistic">
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
        <item>@string/all_time</item>
    </string-array>

    <string name="Vote">Liked</string>
    <string name="Comments">Popular</string>
    <string name="Severity">Important</string>
    <string name="TOP_10">TOP 10</string>

    <string-array name="tabs_in_top10">
        <item>@string/Vote</item>
        <item>@string/Comments</item>
        <item>@string/Severity</item>
    </string-array>

    <string-array name="time_update_items">
        <item>Every time</item>
        <item>Once a day</item>
        <item>Once a week</item>
        <item>Once a month</item>
    </string-array>

    <string-array name="time_update_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="map_type_items">
        <item>Normal map type</item>
        <item>View from satellite</item>
    </string-array>

    <string-array name="map_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="title_activity_problem_details_screen">ProblemDetailsScreen</string>
    <string name="title_activity_problem_details">Problem Details</string>
    <string name="title_activity_statistic">Statistics</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all_time">All time</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_message">No data available</string>

</resources>
